--- a/css/mypage/estimateStorage.css
+++ b/css/mypage/estimateStorage.css
@@ -64,15 +64,16 @@
 .title-container {
     border-bottom: 2px solid #000;
     padding-bottom: 10px;
-    padding-left: 10px;
+    padding-left: 5px;
+    margin-left: 10px;
 }
 
-.category {
+/* .category {
     font-size: 16px;
     font-weight: 400;
     margin-top: 15px;
     margin-bottom: 10px;
-}
+} */
 
 .main-title {
     display: flex;
@@ -84,13 +85,15 @@
     font-weight: 600;
     color: #CA1A5A;
     margin: 0;
+    margin-top: 10px; 
 }
 
 .total {
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 600;
     padding-right: 20px;
     padding-top: 7px;
+    margin-top: 10px; 
 }
 
 /* 3. 견적함 박스 */
@@ -205,14 +208,14 @@
     z-index: 10;
 }
 
-.selectedList {
+.selected-list {
     display: grid;
     grid-template-rows: repeat(5, auto);
     padding: 5px;
     border-radius: 5px;
 }
 
-.selectedList h1 {
+.selected-list h1 {
     font-size: 19px;
     font-weight: 600;
     width: 825px;
@@ -253,11 +256,23 @@
     padding: 12px 20px
 }
 
+.company-title {
+    display: flex;
+    justify-content: space-between;
+}
+
 .company-name {
     color: #ca1a5a;
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 5px;
+}
+
+.del-list {
+    font-size: 12px;
+    color: 757575;
+    margin-right: 20px;
+    cursor: pointer;
 }
 
 .company-detail {
@@ -310,42 +325,42 @@
     font-weight: 400;
 }
 
-.priceDetail {
+.price-container {
     width: 800px;
 }
 
-.regular, .discount, .final {
-    margin-left: 10px;
-}
-
-.regular {
+.price-regular {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 5px;
     margin-left: 10px;
     color: #757575;
 }
 .discount {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #000;
-    color: #757575;
-}
-.discount-color {
+    font-size: 16px;
+    font-weight: 600;
+    margin-left: 10px;
+    padding: 10px 5px;
     color: #ca1a5a;
 }
-.final {
+
+.price-final {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
     color: #000;
     font-size: 20px;
-    font-weight: bolder;
+    font-weight: 600;
+    margin-left: 10px;
+    padding: 15px 5px;
+    border-top: 2px solid #000;
 }
 
 
-/* 삭제 모달창 */
+/* 견적함 삭제 모달창 */
 .modal2 {
     position: fixed;
     top: 0;
@@ -405,7 +420,7 @@
     background-color: rgba(202, 26, 90, 0.4);
 }
 
-.cancel-btn {
+.cancel-btn, .cancel-btn2 {
     font-size: 14px;
     padding: 8px 40px;
     border: 1px solid #CA1A5A;
@@ -419,6 +434,51 @@
 }
 
 .modal2.show2 { 
+    display: block;
+    position: fixed;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+
+/* 상품 삭제 모달창 */
+.modal3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.modal-content3 {
+    max-width: 450px;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding: 45px;
+}
+
+.modal-content3 p {
+    font-size: 13px;
+    font-weight: 400;
+    color: #545454;
+    text-align: center;
+    line-height: 1.5;
+    margin: 20px 0;
+}
+
+.modal3.show3 { 
     display: block;
     position: fixed;
     top: 50px;
